# diverge

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.sh  create-demo.sh  screenshot.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compare.rs  config.rs  lib.rs  main.rs  models.rs  scanner.rs
src/components/: ConfirmDialog.tsx  DiffEditor.tsx  FileTree.tsx  OutlineModal.tsx  SettingsPanel.tsx  StatusBar.tsx  Toast.tsx  Toolbar.tsx
src/constants/: statusConfig.ts
src/hooks/: useCompare.ts  useDirectories.ts  useFileTree.ts  useFileWatcher.ts  useModifications.ts  useSettings.ts  useToast.ts
src/utils/: fileIcons.ts  languageMap.ts  pathUtils.ts  structureParser.test.ts  structureParser.ts
