[package]
name = "diverge"
version = "0.1.0"
description = "Desktop folder comparison tool with side-by-side diff viewing"
authors = ["cedric"]
license = "MIT"
edition = "2021"

[lib]
name = "diverge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"

